ch7/ch7-better-errors/panic-to-result-usage/tests/fails/create_person_with_result_and_empty_panic.stderr
error: please make sure every panic in your function has a message
  --> tests/fails/create_person_with_result_and_empty_panic.rs:12:9
   |
12 |         panic!();
   |         ^^^^^

error: this macro can only be applied to a function that does not return a Result. Signature: Result < Person, String >
  --> tests/fails/create_person_with_result_and_empty_panic.rs:10:1
   |
10 | fn create_person_with_result(name: String, age: u32) -> Result<Person, String> {
   | ^^
